--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-04  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* dae/op_start: fix bash1 detection
+
 2002-03-25  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in: some preliminary stuff for NGPT
