Reuse samples_file_t to implement opp_samples_file allowing some cleanup and a slighlty performance increase. Now all read access to samples files are made through samples_file_t
Phil

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002-04-07  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/oprofpp.h:
+	* oprof_report/oprof_report.cpp:
+	* pp/op_time.cpp:
+	* pp/opf_container.cpp:
+	* pp/opf_filter.cpp:
+	* pp/oprofpp_util.cpp:
+	* pp/oprofpp.cpp: use samples_file_t as internal implementation
+	  of opp_samples_files. Now all samples files read are made
+	  through samples_file_t object.
+
 2002-04-04  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* dae/op_start: fix bash1 detection
