--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-11  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/opf_filter.cpp: fix a memory leak uncovered
+	  by valgrind <http://developer.kde.org/~sewardj>
+
 2002-04-09  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* dae/oprofiled.h: move definition of linked list to ...
