Phil, this is the sort of thing I'm talking about.
Note I'd like to use the standard header :

/**
 * \file cvsx4IHSg
 * Copyright 2002 OProfile authors
 * Read the file COPYING
 *
 * \author John Levon <moz@compsoc.man.ac.uk>
 */

(add \author where appropriate) since it's miles shorter
and more informative.

Pros of splitting things up :

1. Depdencies of smaller scope. Now nothing else at all needs
   to know cplus_demangle() goop.

2. Simple source navigation

3. Interface simply presented by the .h file

Cons :

1. more complicated build (you know one day I will make us use automake ...)

2. more source files

This example is fairly extreme (short span of code), but pollution with DMGL_PARAMS etc.
in other files is now gone.

And think if we want to say work around a demangler bug or something

--- a/TODO
+++ b/TODO
@@ -1,38 +1,25 @@
 0.2
 ---
-
- o split documentation into tutorial + ref. Include /everything/ in the ref: sample format,
-   logfile meanings etc. 
- o audit oprof_start for security + document sudo
  o get symbol size via elf instead of bfd
  o add support for samples not belonging to any symbols probably through
    artificially created symbols
    these two todo are perhaps worthwhile to implement now. The new filtering
    of symbols make them less interesting. - let's wait - john
- o should we pin rather than loop sample buffer overflow too ?
- o fix NGPT bug
- o difference between two profile session. Difference must be made at source level. 
-   (This is a part of post-prof). Difference can be made also at symbols level.
- o determine where we need preempt_disable/enable to prevent pre-emption + test (ugh)
- o include lock metering stuff
- o consider if we can get to the new subsection 1 in 2.4.18+ via a kernel patch to
-   insert the start/end (if clean, submit to linux-kernel)
  o remaining little cleanups of output format etc.
  o document gcc 2.95 and linenr info problems especially for inline functions
  o test post-profile -c0,1 --sort
  o check post profile for multiple symbols with same name
 
-oprof_report:
-
-- demangling
-- folderview of sample files + sessions in the gui itself (later ?)
-- disassembly. form "+0x8b" for intra-symbol samples optionnaly, on by default?
-- tune and test hotspot
-- source (later ?)
- 
 Before 1.0
 ----------
 
+ o determine where we need preempt_disable/enable to prevent pre-emption + test (ugh)
+ o should we pin rather than loop sample buffer overflow too ?
+ o audit oprof_start for security + document sudo
+ o split documentation into tutorial + ref. Include /everything/ in the ref: sample format,
+   logfile meanings etc.
+ o difference between two profile session. Difference must be made at source level. 
+   (This is a part of post-prof). Difference can be made also at symbols level.
  o op_time for only some specified files... 
  o cache some stuff / nr. samples - op_time is horrendously slow
  o coherent naming class conventions
@@ -63,8 +50,24 @@ Checks to make
  
 Later
 -----
+ 
+oprof_report:
 
-o pp rewrite ! not clear if we need to rewrite it.
+o move uniformly to doxygen Javadoc style :
+
+	/**
+	 * make two wheels go fast
+	 * @param first first wheel
+	 * @param second second wheel
+	 * @return false if there were no wheels
+	 */
+- demangling
+- folderview of sample files + sessions in the gui itself (later ?)
+- disassembly. form "+0x8b" for intra-symbol samples optionnaly, on by default?
+- tune and test hotspot
+- source (later ?)
+ 
+
 o profile the NMI handler code
 o post-prof GUI ? (big job)
  
