--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-04-16  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/opf_container.cpp:
+	* pp/oprofpp.h:
+	* pp/demangle_symbol.h:
+	* pp/demangle_symbol.cpp:
+	* pp/Makefile.in: move demangle_symbol into own
+	  file
+ 
+	* TODO: update some...
+ 
 2002-04-11  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pp/opf_filter.cpp: fix a memory leak uncovered
