--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-10-26  Maynard Johnson  <maynardj@us.ibm.com>
+
+	* libutil++/bfd_support.cpp:
+	* libutil++/bfd_support.h: Fix regression in handling separate
+	  debuginfo files 
+
 2009-10-23  Robert Richter  <robert.richter@amd.com>
 
 	* autogen.sh: create copies with libtoolize instead of symlinks
