--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-10-15  Roland Grunberg  <roland.grunberg@gmail.com>
+
+	* libop/op_xml_events.c:
+	* libop/op_xml_out.c:
+	* libop/op_xml_out.h:
+	* doc/ophelp.xsd: Add unit mask type attribute for an event in
+	  the ophelp schema
+
 2010-10-15  Maynard Johnson  <maynardj@us.ibm.com>
 
 	* doc/ophelp.xsd:
