--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2010-11-7  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>
+
+	* events/Makefile.am:
+	* libop/op_events.c:
+	* libop/op_cpu_type.h:
+	* libop/op_cpu_type.c:
+	* utils/ophelp.c:
+	* events/x86-64/family12h/events: New File
+	* events/x86-64/family12h/unit_masks: New File
+	* events/x86-64/family14h/events: New File
+	* events/x86-64/family14h/unit_masks: New File
+	* events/x86-64/family15h/events: New File
+	* events/x86-64/family15h/unit_masks: New File
+	  Add support for new AMD processors (family12h/14h/15h)
+
 2010-10-15  Roland Grunberg  <roland.grunberg@gmail.com>
 
 	* libop/op_xml_events.c:
