--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-01-05  William Cohen  <wcohen@redhat.com>
+
+	* utils/opcontrol: Add argument checking for numerical arguments
+
 2010-12-16  John Villalovos <john.l.villalovos@intel.com>
 
 	* events/Makefile.am:
