--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-09  William Cohen  <wcohen@redhat.com>
+
+	* libpp/format_output.h: Do not use mutable for reference variable.
+
 2011-01-17  Will Deacon  <will.deacon@arm.com>
 
 	* events/arm/armv7-ca9/events: Add missing TLB event
